tests/toylang/neg/001126_mutation.toylang
program a = { if int a then sleep; } .
